# Reckon

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.9d2d883  CMakeLists.txt.user.ff5c72c  README.md  cfsell.cpp  cfsell.h  cfsell.ui  imprimer.cpp  imprimer.h  imprimer.ui  interface.cpp  interface.h  interface.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registry.cpp  registry.h  registry.ui  sell.cpp  sell.h  sell.ui  server.cpp  server.h  stock.cpp  stock.h  stock.ui  validation.cpp  validation.h  validation.ui
